--- a/gasscan/app/src/main/res/values/strings.xml
+++ b/gasscan/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <string name ="text_to_change">"Scan Receipt"</string>
     <string name ="change_text">"Input Receipt"</string>
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
 </resources>
