--- a/gasscanmk1/app/src/main/res/values/strings.xml
+++ b/gasscanmk1/app/src/main/res/values/strings.xml
@@ -44,5 +44,17 @@
     <string name="miles">miles</string>
     <string name="title_activity_settings">Settings</string>
 
+    <!--              Cloud Vision Stuff                                    - -->
+
+    <string name="action_settings">Settings</string>
+    <string name="image_details_header">Details:</string>
+    <string name="image_preview_header">Preview:</string>
+    <string name="loading_message">Uploading image. Please wait.</string>
+
+    <string name="dialog_select_prompt">Choose a picture</string>
+    <string name="dialog_select_camera">Camera</string>
+    <string name="dialog_select_gallery">Gallery</string>
+
+    <string name="image_picker_error">Something is wrong with that image. Pick a different one</string>
 
 </resources>
