--- a/gasscanmk1/app/src/main/res/values/strings.xml
+++ b/gasscanmk1/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
 
     <string name="image_picker_error">Something is wrong with that image. Pick a different one</string>
 
+    <!--          testing strings for use with inner classes and firebase calls -->
+    <string name="lastKey">unassigned</string>
 </resources>
